# api/lib/swagger/swagger.json
@@ -535,31 +535,6 @@
         }
       }
     },
-    "GovernmentIdDocumentInput": {
-      "type": "object",
-      "properties": {
-        "kind": {
-          "$ref": "#/definitions/GovernmentIdDocumentInputKind"
-        },
-        "fileIds": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "GovernmentIdDocumentInputKind": {
-      "type": "string",
-      "enum": [
-        "GI_UNKNOWN",
-        "GI_US_DRIVING_LICENSE",
-        "GI_US_PASSPORT_CARD",
-        "GI_US_GOVERNMENT_ID",
-        "GI_US_PASSPORT"
-      ],
-      "default": "GI_UNKNOWN"
-    },
     "ImageProcessingMode": {
       "type": "string",
       "enum": [
@@ -765,8 +740,8 @@
         "address": {
           "$ref": "#/definitions/Address"
         },
-        "governmentIdDoc": {
-          "$ref": "#/definitions/GovernmentIdDocumentInput"
+        "usGovernmentIdDoc": {
+          "$ref": "#/definitions/UsGovernmentIdDocumentInput"
         },
         "proofOfAddressDoc": {
           "$ref": "#/definitions/DocumentInput"
@@ -785,6 +760,31 @@
           "type": "string"
         }
       }
+    },
+    "UsGovernmentIdDocumentInput": {
+      "type": "object",
+      "properties": {
+        "kind": {
+          "$ref": "#/definitions/UsGovernmentIdDocumentInputKind"
+        },
+        "fileIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "UsGovernmentIdDocumentInputKind": {
+      "type": "string",
+      "enum": [
+        "GI_UNKNOWN",
+        "GI_US_DRIVING_LICENSE",
+        "GI_US_PASSPORT_CARD",
+        "GI_US_GOVERNMENT_ID",
+        "GI_US_PASSPORT"
+      ],
+      "default": "GI_UNKNOWN"
     },
     "User": {
       "type": "object",
